# youtube-download

./: .gitignore  README-en.md  README.md  main.py  pyproject.toml
plan/: plan.md  twitter-x-url-support.md
src/yt_downloader/: __init__.py  cli.py  config.py  downloader.py  encoding.py  hooks.py  logger.py  tracker.py  ui.py  url.py
tests/: conftest.py  test_cli.py  test_config.py  test_downloader.py  test_encoding.py  test_format_selector.py  test_hooks.py  test_tracker.py  test_ui.py  test_url.py
