[project]
name = "yt-downloader"
version = "1.0.0"
description = "yt-dlp を使った YouTube 動画ダウンローダー (QuickTime 対応・M1 最適化)"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
]

[project.scripts]
yt-downloader = "yt_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_downloader"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.pyright]
include = ["src", "tests", "main.py"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"

[tool.coverage.run]
source = ["src/yt_downloader"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
